Add commands to ensure success in Google Colab env

--- a/tester.ipynb
+++ b/tester.ipynb
@@ -3,9 +3,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74a70791",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "!rm -rf ultrasound-inverter\n",
+    "!git clone https://github.com/rcalfredson/ultrasound-inverter\n",
+    "!cd ultrasound-inverter\n",
+    "import os\n",
+    "os.chdir('ultrasound-inverter')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "74a70791",
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<bound method ImageCreator.generate_displacement of <image_creator.ImageCreator object at 0x7f9ae69a50d0>>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 1
+    }
+   ],
    "source": [
     "from image_creator import ImageCreator\n",
     "ImageCreator().generate_displacement"
@@ -14,9 +38,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python394jvsc74a57bd0208d4b330638b1b52416e47d8f55114af86e2d7a74d6d93cb0bbddf58f10713e",
+   "display_name": "Python 3.9.4 64-bit ('data-sci': conda)"
   },
   "language_info": {
    "codemirror_mode": {
