Ensure git repo gets freshly loaded each time

--- a/tester.ipynb
+++ b/tester.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.chdir('/content')\n",
     "!rm -rf ultrasound-inverter\n",
     "!git clone https://github.com/rcalfredson/ultrasound-inverter\n",
     "!cd ultrasound-inverter\n",
